! Added more bug fixes to 1.0.1

--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -153,11 +153,10 @@ h3.ticketheader img
 {
 	margin-bottom: 10px;
 }
-.shd_posteravatar
+.shd_posteravatar img
 {
 	padding: 0px;
-	max-width: 50px;
-	max-height: 50px;
+	max-width: 10.5em;
 }
 .shd_replyarea
 {
