- Removed custom fields from left column on new ticket screen ! Moved all custom fields to below ticket ! Fixed some small bugs in Display (still buggy)

--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -121,7 +121,8 @@ h3.ticketheader img
 .shd_additional_details
 {
 	overflow: auto;
-	width: 100%;	
+	width: 20%;
+	float: left;
 }
 .shd_ticket_side_column ul
 {
