! Deleting a custom field from the front CF menu now works properly. ! Attempting to delete a custom field from the menu also prompts like the delete button does in the edit screen. ! Minor formatting improvements for custom fields in the posting interface.

--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -242,6 +242,10 @@ h3.ticketheader img
 {
 	margin-top: 8px;
 }
+.shd_customfields .input_text
+{
+	width: 85%;
+}
 .shd_ticket_log_expand_container
 {
 	margin-right: 3px;
