--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -139,8 +139,8 @@ h3.ticketheader img
 {
 	min-height: 280px;
 	overflow: auto;
-	/*width: 20%;*/
 	float: left;
+	width: 100%;
 }
 .shd_customfields
 {
@@ -153,12 +153,17 @@ h3.ticketheader img
 {
 	overflow: auto;
 	float: left;
+	width: 100%;
 }
 .shd_ticket_side_column ul
 {
 	list-style-type: none;
 	padding-left: 0;
 	margin: 0;
+}
+.shd_ticket_side_column li
+{
+	line-height: 1.8em;
 }
 
 /* The ticket container */
