! Canned replies are now visible all the time when appropriate, rather than buried in go-advanced.

--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -501,6 +501,12 @@ h3.ticketheader img
 {
    margin: 0.75em 0 0.5em 0;
 }
+#canned_replies
+{
+	float: left;
+	width: 66%;
+	margin-top: 1em;
+}
 
 /**********************************
 * General actions				 *
