! Pinging notification now passes back on error and should be passed to the full reply regardless of whether the AJAX call was remade or not (so if you go to reply, pull up the form, tick some boxes and get thrown back at error, the list should still be saved, regardless of whether you re-open the list or not) [Feature 739] ! Notifications AJAX now formatted a bit more nicely. Might need more yet, but I'm happy with it for now. [Feature 739]
And with this, I'm done. Not going to bother tagging SVN, but at this point, no new features, only bug fixes will be committed for the 2.0 release, and barring any new bugs, I'm looking at a release probably late next week.

--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -413,6 +413,17 @@ h3.ticketheader img
 	margin-bottom: 10px;
 }
 
+.shd_ajax_head
+{
+	font-weight: bold;
+}
+.shd_ajaxnotify
+{
+	width: 40%;
+	margin-right: 5%;
+	float: left;
+}
+
 /**********************************
 * Attachment stuff				  *
 ***********************************/
