! Fixed Profile not displaying tickets correctly because of a bug fix to re-add description css back to the admin section for SimpleDesk, which still uses description css.  At a later time the description css should be completely removed as it was done in SMF. (Fixes #28)
Signed-off-by: jdarwood007 <unmonitored+github@sleepycode.com>

--- a/css/helpdesk_admin.css
+++ b/css/helpdesk_admin.css
@@ -285,7 +285,7 @@ h3 a.permcollapse img
 }
 
 /* SMF 2.1 no longer uses description, but we make use of it still! */
-.description
+.sd_description
 {
 	background: #F8F8F8;
     overflow: auto;
