+ Initial Addition of admin log actions (Implants #33)
Signed-off-by: jdarwood007 <unmonitored+github@sleepycode.com>

--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -142,7 +142,7 @@ span.shd_new_tickets
 }
 
 /* The page index color looks ugly with our theme. */
-.shd_main_hd .cat_bar .current_page
+.shd_main_hd .cat_bar .current_page, .shd_pages .current_page
 {
 	color: #fff;
 }
