--- a/css/helpdesk_admin.css
+++ b/css/helpdesk_admin.css
@@ -299,8 +299,8 @@ h3 a.permcollapse img
 
  /* Plugin switch inmage */
 
-+features_switch
-+{
+features_switch
+{
 	float: right;
 	margin: 0.2em 1em 1em;
 }
