Catching the core changes and moving to HTML5.

--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -240,7 +240,7 @@ form#postmodify .shd_ticket_roundframe
 {
 	margin-top: 8px;
 }
-.shd_customfields .input_text
+.shd_customfields input[type="text"]
 {
 	width: 85%;
 }
