--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -179,7 +179,8 @@ form#postmodify .shd_ticket_roundframe
 {
 	width: 25%;
 }
-.shd_ticket_leftcolumn .roundframe {
+.shd_ticket_leftcolumn .roundframe
+{
 	margin: 0;
 }
 /* The right column in the ticket display */
@@ -267,11 +268,9 @@ form#postmodify .shd_ticket_roundframe
 /* The big reply button */
 .shd_replybutton
 {
-	background: url(../images/simpledesk/respond.png) no-repeat left;
+	background: url('../images/simpledesk/respond.png') no-repeat left;
 	background-position: 10px;
-	padding: 10px;
-	padding-left: 40px;
-	padding-top: 8px;
+	padding: 8px 10px 10px 40px;
 	font-weight: bold;
 	font-size: 100%;
 	margin-bottom: 10px;
@@ -281,23 +280,22 @@ form#postmodify .shd_ticket_roundframe
 /* The big quote button */
 .shd_quotebutton
 {
-	margin-top: 10px;
-	height: 15px;
-	background: url(../images/simpledesk/quote.png) no-repeat left;
+	background: url('../images/simpledesk/quote.png') no-repeat left;
 	background-position: 10px;
-	padding: 10px;
-	padding-left: 40px;
-	padding-top: 8px;
+	padding: 8px 10px 10px 40px;
 	font-weight: bold;
 	font-size: 100%;
+	margin-bottom: 10px;
 	margin-right: 10px;
+	border: 1px solid #ddd;
+	border-radius: 7px;
 }
 /* Go advanced! */
 .shd_advancedbutton
 {
 	margin-top: 10px;
 	height: 15px;
-	background: url(../images/simpledesk/advanced.png) no-repeat left;
+	background: url('../images/simpledesk/advanced.png') no-repeat left;
 	background-position: 10px;
 	padding: 10px;
 	padding-left: 40px;
@@ -311,7 +309,7 @@ form#postmodify .shd_ticket_roundframe
 .shd_editpreferences
 {
 	height: 15px;
-	background: url(../images/simpledesk/edit.png) no-repeat left;
+	background: url('../images/simpledesk/edit.png') no-repeat left;
 	background-position: 10px;
 	padding: 10px;
 	padding-left: 40px;
@@ -334,17 +332,17 @@ form#postmodify .shd_ticket_roundframe
 }
 #shd_showtickets
 {
-	background: url(../images/simpledesk/details.png) no-repeat left;
+	background: url('../images/simpledesk/details.png') no-repeat left;
 	background-position: 10px;
 }
 #shd_post_proxy
 {
-	background: url(../images/simpledesk/proxy.png) no-repeat left;
+	background: url('../images/simpledesk/proxy.png') no-repeat left;
 	background-position: 10px;
 }
 #shd_post_ticket
 {
-	background: url(../images/simpledesk/ticket.png) no-repeat left;
+	background: url('../images/simpledesk/ticket.png') no-repeat left;
 	background-position: 10px;
 }
 
@@ -569,59 +567,74 @@ dl.stats dd span, dl.stats dt span
 }
 
 /* We need something like winfo in helpdesk */
-.noup {
+.noup
+{
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
 	margin: 0 !important;
 }
 
-.shd_icon_fullhead {
+.shd_icon_fullhead
+{
 	position: relative;
 }
 
 /* Something to keep it look good */
-#replies .windowbg:last-of-type {
+#replies .windowbg:last-of-type
+{
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
 }
 
 /* Helpdesk table-width*/
-.shd_5 {
+.shd_5
+{
 	width: 5%;
 }
-.shd_10 {
+.shd_10
+{
 	width: 10%;
 }
-.shd_20 {
+.shd_20
+{
 	width: 20%;
 }
-.shd_25 {
+.shd_25
+{
 	width: 25%;
 }
-.shd_33 {
+.shd_33
+{
 	width: 33%;
 }
-.shd_50 {
+.shd_50
+{
 	width: 50%;
 }
-.shd_75 {
+.shd_75
+{
 	width: 75%;
 }
 
 /* Start of responsiveness */
 /* This will be moved to its file once it gets more work on it */
-@media (max-width: 480px) {
-	.shd_ticket_rightcolumn, .shd_ticket_leftcolumn {
+@media (max-width: 480px)
+{
+	.shd_ticket_rightcolumn, .shd_ticket_leftcolumn
+	{
 		width: 100%;
 		padding: 0;
 	}
-	.shd_ticket_rightcolumn {
+	.shd_ticket_rightcolumn
+	{
 		margin-top: 10px;
 	}
-	.shd_profile_navigation {
+	.shd_profile_navigation
+	{
 		margin-right: 0;
 	}
-	input[type="checkbox"] {
+	input[type="checkbox"]
+	{
 		height: 15px;
 		width: 15px;
 	}
