Re-order custom fields
Implants #84 to reorder custom fields.

--- a/css/helpdesk_admin.css
+++ b/css/helpdesk_admin.css
@@ -139,6 +139,10 @@ dl.permsettings img, dl.cannedsettings dd img.icon {
 	margin: 0 10px 0 0;
 }
 
+dl span.custom_field_order img {
+	margin-right: 0;	
+}
+
 h3 a.permcollapse img {
 	margin-top:8px;
 }
